--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
         <script src="js/leaflet-measure.js"></script>
-        <script src="data/_1.js"></script>
-        <script src="data/_2.js"></script>
-        <script src="data/_3.js"></script>
+        <script src="data/__0.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -43,7 +41,7 @@
         }
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[56.20305545442075,95.70137526781139],[56.207867690430305,95.71679648726413]]);
+        }).fitBounds([[56.20100731583459,95.68935530232777],[56.210631697974506,95.72019774123326]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -62,20 +60,7 @@
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        map.createPane('pane_OSMStandard_0');
-        map.getPane('pane_OSMStandard_0').style.zIndex = 400;
-        var layer_OSMStandard_0 = L.tileLayer('http://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            pane: 'pane_OSMStandard_0',
-            opacity: 1.0,
-            attribution: '<a href="https://www.openstreetmap.org/copyright">© OpenStreetMap contributors, CC-BY-SA</a>',
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 19
-        });
-        layer_OSMStandard_0;
-        map.addLayer(layer_OSMStandard_0);
-        function pop__1(feature, layer) {
+        function pop___0(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     if (typeof layer.closePopup == 'function') {
@@ -93,290 +78,76 @@
                         <td colspan="2">' + (feature.properties['fid'] !== null ? autolinker.link(feature.properties['fid'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['zone_number'] !== null ? autolinker.link(feature.properties['zone_number'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['№ зоны'] !== null ? autolinker.link(feature.properties['№ зоны'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['ПЗЗ_zone_name'] !== null ? autolinker.link(feature.properties['ПЗЗ_zone_name'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['кол-во зд.'] !== null ? autolinker.link(feature.properties['кол-во зд.'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['ПЗЗ_zone_descr'] !== null ? autolinker.link(feature.properties['ПЗЗ_zone_descr'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['S'] !== null ? autolinker.link(feature.properties['S'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['S_count'] !== null ? autolinker.link(feature.properties['S_count'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['S_sum'] !== null ? autolinker.link(feature.properties['S_sum'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['s_total_count'] !== null ? autolinker.link(feature.properties['s_total_count'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['s_total_sum'] !== null ? autolinker.link(feature.properties['s_total_sum'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['kz'] !== null ? autolinker.link(feature.properties['kz'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['pz'] !== null ? autolinker.link(feature.properties['pz'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['h_avg'] !== null ? autolinker.link(feature.properties['h_avg'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['max_kz_max'] !== null ? autolinker.link(feature.properties['max_kz_max'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['к_застр'] !== null ? autolinker.link(feature.properties['к_застр'].toLocaleString()) : '') + '</td>\
                     </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
-        function style__1_0(feature) {
+
+        function style___0_0() {
+            return {
+                pane: 'pane___0',
+                opacity: 1,
+                color: 'rgba(128,14,16,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(228,26,28,0.20784313725490197)',
+                interactive: true,
+            }
+        }
+        map.createPane('pane___0');
+        map.getPane('pane___0').style.zIndex = 400;
+        map.getPane('pane___0').style['mix-blend-mode'] = 'normal';
+        var layer___0 = new L.geoJson(json___0, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json___0',
+            layerName: 'layer___0',
+            pane: 'pane___0',
+            onEachFeature: pop___0,
+            style: style___0_0,
+        });
+        bounds_group.addLayer(layer___0);
+        map.addLayer(layer___0);
+        var baseMaps = {};
+        L.control.layers(baseMaps,{'<img src="legend/__0.png" /> к_застр': layer___0,}).addTo(map);
+        setBounds();
+        var i = 0;
+        layer___0.eachLayer(function(layer) {
             var context = {
-                feature: feature,
+                feature: layer.feature,
                 variables: {}
             };
-            // Start of if blocks and style check logic
-            if (exp__1rule0_eval_expression(context)) {
-                  return {
-                pane: 'pane__1',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(125,139,143,1.0)',
-                interactive: true,
-            };
-                }
-                else if (exp__1rule1_eval_expression(context)) {
-                  return {
-                pane: 'pane__1',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(190,207,80,1.0)',
-                interactive: true,
-            };
-                }
-            else {
-                return {fill: false, stroke: false};
-            }
-        }
-        map.createPane('pane__1');
-        map.getPane('pane__1').style.zIndex = 401;
-        map.getPane('pane__1').style['mix-blend-mode'] = 'normal';
-        var layer__1 = new L.geoJson(json__1, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json__1',
-            layerName: 'layer__1',
-            pane: 'pane__1',
-            onEachFeature: pop__1,
-            style: style__1_0,
+            layer.bindTooltip((exp_label___0_eval_expression(context) !== null?String('<div style="color: #000000; font-size: 6pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + exp_label___0_eval_expression(context)) + '</div>':''), {permanent: true, offset: [-0, -16], className: 'css___0'});
+            labels.push(layer);
+            totalMarkers += 1;
+              layer.added = true;
+              addLabel(layer, i);
+              i++;
         });
-        bounds_group.addLayer(layer__1);
-        map.addLayer(layer__1);
-        function pop__2(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['fid'] !== null ? autolinker.link(feature.properties['fid'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['zone_number'] !== null ? autolinker.link(feature.properties['zone_number'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ПЗЗ_zone_name'] !== null ? autolinker.link(feature.properties['ПЗЗ_zone_name'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['ПЗЗ_zone_descr'] !== null ? autolinker.link(feature.properties['ПЗЗ_zone_descr'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style__2_0() {
-            return {
-                pane: 'pane__2',
-                opacity: 1,
-                color: 'rgba(228,26,28,1.0)',
-                dashArray: '',
-                lineCap: 'square',
-                lineJoin: 'bevel',
-                weight: 4.0,
-                fillOpacity: 0,
-                interactive: true,
-            }
-        }
-        map.createPane('pane__2');
-        map.getPane('pane__2').style.zIndex = 402;
-        map.getPane('pane__2').style['mix-blend-mode'] = 'normal';
-        var layer__2 = new L.geoJson(json__2, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json__2',
-            layerName: 'layer__2',
-            pane: 'pane__2',
-            onEachFeature: pop__2,
-            style: style__2_0,
+        resetLabels([layer___0]);
+        map.on("zoomend", function(){
+            resetLabels([layer___0]);
         });
-        bounds_group.addLayer(layer__2);
-        map.addLayer(layer__2);
-        function pop__3(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2"><strong>Тип застроки</strong><br />' + (feature.properties['building'] !== null ? autolinker.link(feature.properties['building'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">№</th>\
-                        <td>' + (feature.properties['addr:housenumber'] !== null ? autolinker.link(feature.properties['addr:housenumber'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Улица</th>\
-                        <td>' + (feature.properties['addr:street'] !== null ? autolinker.link(feature.properties['addr:street'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Площадь застройки, м²</th>\
-                        <td>' + (feature.properties['S'] !== null ? autolinker.link(feature.properties['S'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Этажность</th>\
-                        <td>' + (feature.properties['h'] !== null ? autolinker.link(feature.properties['h'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Общая площадь, м²</th>\
-                        <td>' + (feature.properties['s_total'] !== null ? autolinker.link(feature.properties['s_total'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['addr_link'] !== null ? autolinker.link(feature.properties['addr_link'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style__3_0(feature) {
-            if (feature.properties['h'] >= 1.000000 && feature.properties['h'] <= 2.000000 ) {
-                return {
-                pane: 'pane__3',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,255,255,1.0)',
-                interactive: true,
-            }
-            }
-            if (feature.properties['h'] >= 2.000000 && feature.properties['h'] <= 3.000000 ) {
-                return {
-                pane: 'pane__3',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,191,191,1.0)',
-                interactive: true,
-            }
-            }
-            if (feature.properties['h'] >= 3.000000 && feature.properties['h'] <= 4.000000 ) {
-                return {
-                pane: 'pane__3',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,128,128,1.0)',
-                interactive: true,
-            }
-            }
-            if (feature.properties['h'] >= 4.000000 && feature.properties['h'] <= 5.000000 ) {
-                return {
-                pane: 'pane__3',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,64,64,1.0)',
-                interactive: true,
-            }
-            }
-            if (feature.properties['h'] >= 5.000000 && feature.properties['h'] <= 6.000000 ) {
-                return {
-                pane: 'pane__3',
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(255,0,0,1.0)',
-                interactive: true,
-            }
-            }
-        }
-        map.createPane('pane__3');
-        map.getPane('pane__3').style.zIndex = 403;
-        map.getPane('pane__3').style['mix-blend-mode'] = 'normal';
-        var layer__3 = new L.geoJson(json__3, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json__3',
-            layerName: 'layer__3',
-            pane: 'pane__3',
-            onEachFeature: pop__3,
-            style: style__3_0,
+        map.on("layeradd", function(){
+            resetLabels([layer___0]);
         });
-        bounds_group.addLayer(layer__3);
-        map.addLayer(layer__3);
-        var baseMaps = {};
-        L.control.layers(baseMaps,{'Здания этажность<br /><table><tr><td style="text-align: center;"><img src="legend/_3_120.png" /></td><td>1 - 2 </td></tr><tr><td style="text-align: center;"><img src="legend/_3_231.png" /></td><td>2 - 3 </td></tr><tr><td style="text-align: center;"><img src="legend/_3_342.png" /></td><td>3 - 4 </td></tr><tr><td style="text-align: center;"><img src="legend/_3_453.png" /></td><td>4 - 5 </td></tr><tr><td style="text-align: center;"><img src="legend/_3_564.png" /></td><td>5 - 6 </td></tr></table>': layer__3,'<img src="legend/_2.png" /> границы участков': layer__2,'связанный слой<br /><table><tr><td style="text-align: center;"><img src="legend/_1_0.png" /></td><td></td></tr><tr><td style="text-align: center;"><img src="legend/_1_1.png" /></td><td></td></tr></table>': layer__1,"OSM Standard": layer_OSMStandard_0,}).addTo(map);
-        setBounds();
+        map.on("layerremove", function(){
+            resetLabels([layer___0]);
+        });
         </script>
     </body>
 </html>
